# reading-goals

./: package-lock.json  package.json  pyproject.toml
backend/: database.db  database.py  main.py  pyproject.toml  requirements.txt  schema.py
backend/app/: __init__.py  database.db  database.py  main.py  schema.py
backend/app/routers/: auth.py  books.py  dashboard.py  goals.py  sessions.py  stats.py  user.py  user_book.py
backend/app/tests/backend/routers/: books_tests.py
backend/package/app/: database.db  database.py  main.py
backend/package/app/routers/: auth.py  books.py  stats.py  user.py  user_book.py
backend/package/fastapi-0.114.0.dist-info/: RECORD
backend/package/fastapi-0.114.2.dist-info/: RECORD
backend/package/httpx-0.28.1.dist-info/: RECORD
backend/package/jose-1.0.0.dist-info/: RECORD
backend/package/jwcrypto-1.5.6.dist-info/: RECORD
backend/package/psycopg2-2.9.10.dist-info/: RECORD
backend/package/pycrypto-2.6.1.dist-info/: RECORD  WHEEL
backend/package/rsa-4.9.dist-info/: RECORD
backend/package/uvicorn-0.30.6.dist-info/: RECORD
backend/routers/: auth.py  authors.py  books.py  dashboard.py  goals.py  sessions.py  stats.py  user.py  users.py
backend/tests/backend/routers/: books_tests.py
frontend/: package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.jsx  api.js  index.css  utils.js
frontend/src/components/: AddSessionForm.jsx  BookInfo.jsx  Button.jsx  CurrentBook.css  CurrentBook.jsx  FinishedBookCard.jsx  FinishedCard.css  FinishedCard.jsx  FinishedContainer.jsx  FormInput.jsx  Goals.css  Goals.jsx  InProgressCard.css  InProgressCard.jsx  InProgressContainer.jsx  MobileNav.jsx  Navbar.jsx  NowReadingCard.jsx  Popup.jsx  ProgressCircle.jsx  Sessions.css  Sessions.jsx  Statistics.css  Statistics.jsx  Timer.jsx  (+8 more)
(+39 files in other folders)
