[tool.poetry]
name = "reading_goals"
version = "0.1.0"
description = ""
authors = ["rachelmalbert <albert.rachelm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.114.0"
uvicorn = "^0.30.6"
jose = "^1.0.0"
jwt = "^1.3.1"
passlib = "^1.7.4"
sqlmodel = "^0.0.22"
httpx = "^0.28.1"
python-multipart = "^0.0.19"
bcrypt = "^4.2.1"
pyjwt = "^2.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.packages]]
include = "backend"  # This should match the name of your package directory